--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
-  "functions": {
-    "api/readability.js": {
-      "runtime": "nodejs18.x"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/readability.js",
+      "use": "@vercel/node"
     }
-  }
+  ]
 }
